@@ -112,7 +112,7 @@ bool GennaroJareckiKrawczykRabinDKG::CheckGroup
 
 bool GennaroJareckiKrawczykRabinDKG::Generate
 	(size_t i, std::vector<std::istream*> &in, std::vector<std::ostream*> &out,
-	std::ostream &err, bool simulate_faulty_behaviour)
+	iobroadcast *iob, std::ostream &err, bool simulate_faulty_behaviour)
 {
 	assert(n >= t);
 	assert(n >= ((2 * t) + 1)); // synchronous assumption
@@ -187,12 +187,8 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 			mpz_fspowm(fpowm_table_h, bar, h, b_i[k], p);
 			mpz_mul(C_ik[i][k], g__a_i[k], bar);
 			mpz_mod(C_ik[i][k], C_ik[i][k], p);
-			for (size_t j = 0; j < n; j++)
-			{
-				if (j != i)
-					*out[j] << C_ik[i][k] << std::endl;
-// FIXME: we need a dedicated broadcast channel, i.e. a reliable broadcast protocol
-			}
+// FIXME: we need at least a reliable broadcast protocol
+			iob->Broadcast(C_ik[i][k]);
 		}
 		// $P_i$ computes the shares $s_{ij} = f_i(j) \bmod q$,
 		// $s\prime_{ij} = f\prime_i(j) \bmod q$ and sends $s_{ij}$,
@@ -233,15 +229,11 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 			{
 				for (size_t k = 0; k < t; k++)
 				{
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(C_ik[j][k], j))
 					{
 						err << "P_" << i << ": receiving C_ik failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
-					}
-					else
-					{
-						*in[j] >> C_ik[j][k];
 					}
 				}
 				if (!in[j]->good())
@@ -289,26 +281,19 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 				complaints.push_back(j);
 			}
 		}
-		// If the check fails for an index $i$, $P_j$ broadcasts a 
-		// complaint against $P_i$.
+		// If the check fails for an index $i$,
+		// $P_j$ broadcasts a complaint against $P_i$.
 		std::sort(complaints.begin(), complaints.end());
 		std::vector<size_t>::iterator it =
 			std::unique(complaints.begin(), complaints.end());
 		complaints.resize(std::distance(complaints.begin(), it));
-		for (size_t j = 0; j < n; j++)
+		for (std::vector<size_t>::iterator it = complaints.begin(); it != complaints.end(); ++it)
 		{
-			if (j != i)
-			{
-				for (std::vector<size_t>::iterator it = complaints.begin();
-					it != complaints.end(); ++it)
-				{
-					mpz_set_ui(rhs, *it);
-					*out[j] << rhs << std::endl;
-				}
-				mpz_set_ui(rhs, n);
-				*out[j] << rhs << std::endl; // send end marker
-			}
+			mpz_set_ui(rhs, *it);
+			iob->Broadcast(rhs);
 		}
+		mpz_set_ui(rhs, n); // send end marker
+		iob->Broadcast(rhs);
 		// (c) Each party $P_i$ who, as a dealer, received a complaint
 		//     from party $P_j$ broadcasts the values $s_{ij}$,
 		//     $s\prime_{ij}$ that satisfy (4).
@@ -322,17 +307,13 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 				size_t who;
 				do
 				{
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(rhs, j))
 					{
 						err << "P_" << i << ": receiving who failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
 					}
-					else
-					{
-						*in[j] >> rhs;
-						who = mpz_get_ui(rhs);
-					}
+					who = mpz_get_ui(rhs);
 					if (who < n)
 					{
 						err << "P_" << i << ": receiving complaint against P_" << who << " from P_" << j << std::endl;
@@ -341,7 +322,7 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 							complaints.push_back(j);
 					}	
 				}
-				while (who < n); // no end marker received
+				while (who < n); // until end marker received
 			}
 		}
 		if (complaints_counter[i])
@@ -354,26 +335,14 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 			for (std::vector<size_t>::iterator it = complaints.begin();
 				it != complaints.end(); ++it)
 			{
-				for (size_t j = 0; j < n; j++)
-				{
-					if (j != i)
-					{
-						mpz_set_ui(lhs, *it);
-						*out[j] << lhs << std::endl; // who?
-						*out[j] << s_ij[i][*it] << std::endl;
-						*out[j] << sprime_ij[i][*it] << std::endl;
-					}
-				}		
+				mpz_set_ui(lhs, *it); // who?
+				iob->Broadcast(lhs);
+				iob->Broadcast(s_ij[i][*it]);
+				iob->Broadcast(sprime_ij[i][*it]);
 			}
 		}
-		for (size_t j = 0; j < n; j++)
-		{
-			if (j != i)
-			{
-				mpz_set_ui(lhs, n);
-				*out[j] << lhs << std::endl; // send end marker
-			}
-		}
+		mpz_set_ui(lhs, n); // send end marker
+		iob->Broadcast(lhs);
 		// (d) Each party marks disqualified any party either
 		//      * received more than $t$ complaints in Step 1(b), or
 		//      * answered a complaint in Step 1(c) with values that 
@@ -388,38 +357,26 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 					complaints.push_back(j);
 				do
 				{
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(lhs, j))
 					{
 						err << "P_" << i << ": receiving who failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
 					}
-					else
-					{
-						*in[j] >> lhs;
-						who = mpz_get_ui(lhs);
-					}
+					who = mpz_get_ui(lhs);
 					if (who >= n)
 						break; // end marker received
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(foo, j))
 					{
 						err << "P_" << i << ": receiving foo failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
 					}
-					else
-					{
-						*in[j] >> foo;
-					}
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(bar, j))
 					{
 						err << "P_" << i << ": receiving bar failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
-					}
-					else
-					{
-						*in[j] >> bar;
 					}
 					// compute LHS for the check
 					mpz_fspowm(fpowm_table_g, foo, g, foo, p);
@@ -447,14 +404,11 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 		}
 		// 2. Each party the builds the set of non-disqualified parties $QUAL$.
 		for (size_t j = 0; j < n; j++)
-		{
-			if (std::find(complaints.begin(), complaints.end(), j) ==
-				complaints.end())
-					QUAL.push_back(j);		
-		}
+			if (std::find(complaints.begin(), complaints.end(), j) == complaints.end())
+				QUAL.push_back(j);
 		err << "P_" << i << ": QUAL = { ";
-			for (std::vector<size_t>::iterator it = QUAL.begin(); it != QUAL.end(); ++it)
-				err << "P_" << *it << " ";
+		for (std::vector<size_t>::iterator it = QUAL.begin(); it != QUAL.end(); ++it)
+			err << "P_" << *it << " ";
 		err << "}" << std::endl;
 		// 3. Each party $P_i$ sets his share of the secret as
 		//    $x_i = \sum_{j \in QUAL} s_{ji} \bmod q$ and the value
@@ -484,18 +438,9 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 		{
 			// OPTIMIZED: mpz_fspowm(fpowm_table_g, A_ik[i][k], g, a_i[k], p);
 			mpz_set(A_ik[i][k], g__a_i[k]);
-			for (size_t j = 0; j < n; j++)
-			{
-				if (j != i)
-				{
-					if (simulate_faulty_behaviour)
-					{
-						mpz_add_ui(A_ik[i][k], A_ik[i][k], 1L);
-					}
-					*out[j] << A_ik[i][k] << std::endl;
-				}
-// FIXME: we need a dedicated broadcast channel, i.e. a reliable broadcast protocol
-			}
+			if (simulate_faulty_behaviour)
+				mpz_add_ui(A_ik[i][k], A_ik[i][k], 1L);
+			iob->Broadcast(A_ik[i][k]);
 		}
 		// (b) Each party $P_j$ verifies the values broadcast by the
 		//     other parties in $QUAL$, namely for each $i \in QUAL$,
@@ -509,15 +454,11 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 			{
 				for (size_t k = 0; k < t; k++)
 				{
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(A_ik[j][k], j))
 					{
 						err << "P_" << i << ": receiving A_ik failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
-					}
-					else
-					{
-						*in[j] >> A_ik[j][k];
 					}
 				}
 				// compute LHS for the check
@@ -546,22 +487,15 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 		std::sort(complaints.begin(), complaints.end());
 		it = std::unique(complaints.begin(), complaints.end());
 		complaints.resize(std::distance(complaints.begin(), it));
-		for (size_t j = 0; j < n; j++)
+		for (std::vector<size_t>::iterator it = complaints.begin(); it != complaints.end(); ++it)
 		{
-			if (j != i)
-			{
-				for (std::vector<size_t>::iterator it = complaints.begin();
-					it != complaints.end(); ++it)
-				{
-					mpz_set_ui(rhs, *it);
-					*out[j] << rhs << std::endl;
-					*out[j] << s_ij[i][*it] << std::endl;
-					*out[j] << sprime_ij[i][*it] << std::endl;
-				}
-				mpz_set_ui(rhs, n);
-				*out[j] << rhs << std::endl; // send end marker
-			}
+			mpz_set_ui(rhs, *it);
+			iob->Broadcast(rhs);
+			iob->Broadcast(s_ij[i][*it]);
+			iob->Broadcast(sprime_ij[i][*it]);
 		}
+		mpz_set_ui(rhs, n); // send end marker
+		iob->Broadcast(rhs);
 		// (c) For parties $P_i$ who receive at least one valid complaint,
 		//     i.e., values which satisfy (4) and not (5), the other
 		//     parties run the reconstruction phase of Pedersen-VSS to
@@ -576,42 +510,30 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 				size_t who;
 				do
 				{
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(rhs, j))
 					{
 						err << "P_" << i << ": receiving who failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
 					}
-					else
-					{
-						*in[j] >> rhs;
-						who = mpz_get_ui(rhs);
-					}
+					who = mpz_get_ui(rhs);
 					if (who < n)
 					{
 						err << "P_" << i << ": receiving complaint against P_" << who << " from P_" << j << std::endl;
 					}
 					else
 						break;
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(foo, j))
 					{
 						err << "P_" << i << ": receiving s_ij failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
 					}
-					else
-					{
-						*in[j] >> foo;
-					}
-					if (!in[j]->good())
+					if (!iob->DeliverFrom(bar, j))
 					{
 						err << "P_" << i << ": receiving sprime_ij failed; complaint against P_" << j << std::endl;
 						complaints.push_back(j);
 						break;
-					}
-					else
-					{
-						*in[j] >> bar;
 					}
 					// verify complaint, i.e. (4) holds (5) not.
 					// compute LHS for the check
@@ -673,21 +595,15 @@ bool GennaroJareckiKrawczykRabinDKG::Generate
 		for (std::vector<size_t>::iterator it = complaints.begin(); it != complaints.end(); ++it)
 		{
 			// broadcast shares for reconstruction of $z_i$
-			for (size_t j = 0; j < n; j++)
-			{
-				if ((j != i) &&
-					(std::find(QUAL.begin(), QUAL.end(), j) != QUAL.end()))
-				{
-					*out[j] << s_ij[i][*it] << std::endl;
-				}
-			}
+			iob->Broadcast(s_ij[i][*it]);
 			// collect shares $s_{ij}$ from other parties
 			for (size_t j = 0; j < n; j++)
 			{
 				if ((j != i) && (std::find(complaints.begin(), complaints.end(), j) == complaints.end()) &&
 					(std::find(QUAL.begin(), QUAL.end(), j) != QUAL.end()))
 				{
-					*in[j] >> s_ij[*it][j];
+					if (!iob->DeliverFrom(s_ij[*it][j], j))
+						throw false;
 				}
 			}
 			// compute $z_i$ using Lagrange interpolation (without faulty party)
