@@ -37,7 +37,7 @@
 #define N 5
 #define T 2
 
-int pipefd[N][N][2];
+int pipefd[N][N][2], broadcast_pipefd[N][N][2];
 pid_t pid[N];
 
 void start_instance
@@ -52,12 +52,14 @@ void start_instance
 			/* BEGIN child code: participant P_i */
 			
 			// create pipe streams between all players
-			std::vector<ipipestream*> P_in;
-			std::vector<opipestream*> P_out;
+			std::vector<ipipestream*> P_in, bP_in;
+			std::vector<opipestream*> P_out, bP_out;
 			for (size_t i = 0; i < N; i++)
 			{
 				P_in.push_back(new ipipestream(pipefd[i][whoami][0]));
 				P_out.push_back(new opipestream(pipefd[whoami][i][1]));
+				bP_in.push_back(new ipipestream(broadcast_pipefd[i][whoami][0]));
+				bP_out.push_back(new opipestream(broadcast_pipefd[whoami][i][1]));
 			}
 			
 			// create TMCG and VTMF instances
@@ -104,31 +106,39 @@ void start_instance
 			assert(dkg->CheckGroup());
 
 			// convert pipestreams to input/output streams
-			std::vector<std::istream*> C_in;
-			std::vector<std::ostream*> C_out;
+			std::vector<std::istream*> C_in, B_in;
+			std::vector<std::ostream*> C_out, B_out;
 			for (size_t i = 0; i < N; i++)
 			{
 				C_in.push_back(P_in[i]);
+				B_in.push_back(bP_in[i]);
 				C_out.push_back(P_out[i]);
+				B_out.push_back(bP_out[i]);
 			}
+
+			// create a simple broadcast protocol
+			iobroadcast *iob = new iobroadcast(N, T, whoami, B_in, B_out);
 			
 			// generating $x$ and extracting $y = g^x \bmod p$
 			std::stringstream err_log;
 			start_clock();
 			std::cout << "P_" << whoami << ": dkg.Generate()" << std::endl;
 			if (faulty)
-				assert(!dkg->Generate(whoami, C_in, C_out, err_log, true));
+				dkg->Generate(whoami, C_in, C_out, iob, err_log, true);
 			else
-				assert(dkg->Generate(whoami, C_in, C_out, err_log));
+				assert(dkg->Generate(whoami, C_in, C_out, iob, err_log));
 			stop_clock();
 			std::cout << "P_" << whoami << ": " << elapsed_time() << std::endl;
 			sleep(3 * whoami + (mpz_wrandom_ui() % N));
 			std::cout << "P_" << whoami << ": log follows " << std::endl << err_log.str();
 			
+			// release broadcast
+			delete iob;
+
 			// release DKG and VTMF instances
 			delete dkg, delete vtmf;
 			
-			// release pipe streams
+			// release pipe streams (private channels)
 			size_t numRead = 0, numWrite = 0;
 			for (size_t i = 0; i < N; i++)
 			{
@@ -138,6 +148,17 @@ void start_instance
 			}
 			std::cout << "P_" << whoami << ": numRead = " << numRead <<
 				" numWrite = " << numWrite << std::endl;
+
+			// release pipe streams (broadcast channel)
+			numRead = 0, numWrite = 0;
+			for (size_t i = 0; i < N; i++)
+			{
+				numRead += bP_in[i]->get_numRead() + bP_out[i]->get_numRead();
+				numWrite += bP_in[i]->get_numWrite() + bP_out[i]->get_numWrite();
+				delete bP_in[i], delete bP_out[i];
+			}
+			std::cout << "P_" << whoami << ": broadcast_numRead = " << numRead <<
+				" broadcast_numWrite = " << numWrite << std::endl;
 			
 			std::cout << "P_" << whoami << ": exit(0)" << std::endl;
 			exit(0);
@@ -172,7 +193,7 @@ int main
 	// open pipes
 	for (size_t i = 0; i < N; i++)
 		for (size_t j = 0; j < N; j++)
-			if (pipe(pipefd[i][j]) < 0)
+			if ((pipe(pipefd[i][j]) < 0) || (pipe(broadcast_pipefd[i][j]) < 0))
 				perror("t-dkg (pipe)");
 	
 	// start childs (all correct)
@@ -186,14 +207,18 @@ int main
 		if (waitpid(pid[i], NULL, 0) != pid[i])
 			perror("t-dkg (waitpid)");
 		for (size_t j = 0; j < N; j++)
+		{
 			if ((close(pipefd[i][j][0]) < 0) || (close(pipefd[i][j][1]) < 0))
 				perror("t-dkg (close)");
+			if ((close(broadcast_pipefd[i][j][0]) < 0) || (close(broadcast_pipefd[i][j][1]) < 0))
+				perror("t-dkg (close)");
+		}
 	}
 
 	// open pipes
 	for (size_t i = 0; i < N; i++)
 		for (size_t j = 0; j < N; j++)
-			if (pipe(pipefd[i][j]) < 0)
+			if ((pipe(pipefd[i][j]) < 0) || (pipe(broadcast_pipefd[i][j]) < 0))
 				perror("t-dkg (pipe)");
 	
 	// start childs (two faulty parties)
@@ -212,8 +237,12 @@ int main
 		if (waitpid(pid[i], NULL, 0) != pid[i])
 			perror("t-dkg (waitpid)");
 		for (size_t j = 0; j < N; j++)
+		{
 			if ((close(pipefd[i][j][0]) < 0) || (close(pipefd[i][j][1]) < 0))
 				perror("t-dkg (close)");
+			if ((close(broadcast_pipefd[i][j][0]) < 0) || (close(broadcast_pipefd[i][j][1]) < 0))
+				perror("t-dkg (close)");
+		}
 	}
 	
 	// release VTMF instance
